tests/aether/negative/expect_AE0002_unclosed_brace.aether
fn main() -> i32 {
    return 0;
// missing close brace
